tz-local/resource/consul/vault/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: vault
  namespace: vault
spec:
  rules:
    - host: YOUR_VAULT_HOST
      http:
        paths:
          - backend:
              serviceName: vault-ui
              servicePort: ui
            path: /
  tls:
    - hosts:
      - YOUR_VAULT_HOST
      secretName: ui-tls
